compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_normal_discriminant_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "case 1 of label 1: end case\ncase 'c' of label 'c': end case\ncase true of label true: end case\ncase \"a\" of label \"a\": end case\n"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
