compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_charn_ty_any_size.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : char(*)"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of char_n Any
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
