compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_charn_ty_wrong_size_too_small.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : char(0)"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of char_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 14..15): invalid character count size
| error for (FileId(1), 14..15): computed count is 0
| info: valid sizes are between 1 to 32767
