compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_charn_ty_wrong_type_size.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : char(1.0)"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of char_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:14..17: mismatched types
| note for src/main.t:14..17: this is of type `real`
| info: `real` is not an integer type
