compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_const_compatible.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const k : int := 100"
---
"k"@"src/main.t:6..7" [ConstVar(Const, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
