compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_from_chars.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type c : 'a' .. 'c'"
---
"c"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of range of `char` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
