compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_in_err_msg_missing_both.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const _ :   ..  := 'c'"
---
"_"@(FileId(1), 6..7) [ConstVar(Const, No)]: range of `<error>` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

