compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_constrained_ty_missing_both.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type c : .. "
---
"c"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of range of `<error>` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
